--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -57,6 +57,7 @@ jobs:
             # mandatory
             -Dsonar.projectKey=elisney_pepeu
             -Dsonar.organization=elisney
+            -Dsonar.sources=app/src/main/java
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources= # optional, default is project base directory
             # Comma-separated paths to directories containing test source files.
@@ -64,4 +65,4 @@ jobs:
             # Adds more detail to both client and server-side analysis logs, activating DEBUG mode for the scanner, and adding client-side environment variables and system properties to the server-side log of analysis report processing.
             #-Dsonar.verbose= # optional, default is false
           # When you need the analysis to take place in a directory other than the one from which it was launched, default is .
-          projectBaseDir: app/src/main/java
+          projectBaseDir: .
